--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-flask（済）
-pandas,numpy,scikit-learn（済）
-
-〇RandomForestRegressorとRandomForestClassifierの違い
-RandomForestRegressor→回帰（数値として予測）
-RandomForestClassifier→分類（OKかNGかなどの判断）
-
-〇ランダムフォレストコードの参考記事
-https://tech-compass.jp/python/python%e3%81%a8scikit-learn%e3%81%a7%e5%a7%8b%e3%82%81%e3%82%8b%e3%83%a9%e3%83%b3%e3%83%80%e3%83%a0%e3%83%95%e3%82%a9%e3%83%ac%e3%82%b9%e3%83%88%e5%9b%9e%e5%b8%b0%ef%bc%81randomforestregressor/#toc1
-
-〇flask_loginの使い方
-https://zenn.dev/oit2003/articles/3e4b88664afe59
-
-〇メモ
-一旦タスク一覧画面等は進捗を取り除いて作成しています。時間があれば追加予定です。
-
+flask
+pandas
+numpy
+scikit-learn
+flask-login
 gunicorn==23.0.0
+
+# ===============================
+# メモ（コメント）
+# ===============================
+
+# RandomForestRegressor と RandomForestClassifier の違い
+# RandomForestRegressor: 回帰（数値を予測）
+# RandomForestClassifier: 分類（OK / NG など）
+
+# ランダムフォレスト参考記事
+# https://tech-compass.jp/python/python%e3%81%a8scikit-learn%e3%81%a7%e5%a7%8b%e3%82%81%e3%82%8b%e3%83%a9%e3%83%b3%e3%83%80%e3%83%a0%e3%83%95%e3%82%a9%e3%83%ac%e3%82%b9%e3%83%88%e5%9b%9e%e5%b8%b0%ef%bc%81randomforestregressor/#toc1
+
+# flask-login の使い方
+# https://zenn.dev/oit2003/articles/3e4b88664afe59
